# tiny-vector

./: .gitignore  Cargo.toml  Dockerfile
.github/actions/prepare-rust/: action.yml
.github/workflows/: testing.yml
src/: helper.rs  main.rs  prelude.rs
src/components/: collector.rs  mod.rs  name.rs  output.rs
src/event/: log.rs  metric.rs  mod.rs
src/sinks/: black_hole.rs  console.rs  datadog_log.rs  datadog_logs.rs  file.rs  mod.rs  prometheus_exporter.rs  sqlite.rs
src/sources/: mod.rs  random_logs.rs  sysinfo.rs  tcp_server.rs
src/topology/: mod.rs  validation.rs
src/transforms/: add_fields.rs  broadcast.rs  filter.rs  mod.rs  regex_parser.rs  remove_fields.rs  route.rs
src/transforms/condition/: and.rs  has_attribute.rs  has_tag.rs  is_log.rs  is_metric.rs  mod.rs  not.rs  or.rs  prelude.rs
