[package]
name = "tiny-vector"
version = "0.1.0"
edition = "2021"

[features]
default = ["sink-datadog-logs", "source-sysinfo", "source-tcp-server"]
source-sysinfo = ["dep:sysinfo"]
source-tcp-server = ["tokio/net"]
sink-datadog-logs = ["dep:reqwest"]

[dependencies]
tokio = { version = "1.38.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
indexmap = { version = "2.2.6", features = ["serde"] }
reqwest = { version = "0.12.5", features = [
    "brotli",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["indexmap"] }
toml = { version = "0.8.14", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
sysinfo = { version = "0.31.3", optional = true }
