[package]
name = "tiny-vector"
version = "0.1.0"
edition = "2021"

[features]
default = ["sink-datadog-logs", "source-sysinfo", "source-tcp-server"]
source-sysinfo = ["dep:sysinfo"]
source-tcp-server = ["tokio/net"]
sink-datadog-logs = ["dep:reqwest"]

[dependencies]
derive_more = { version = "1.0", default-features = false, features = ["from"] }
enum_dispatch = "0.3"
indexmap = { version = "2.4", features = ["serde"] }
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.12", features = [
    "brotli",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap"] }
sysinfo = { version = "0.31", features = [
    "system",
], default-features = false, optional = true }
thiserror = "1.0"
tokio = { version = "1.39", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { version = "0.8", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
derive_more = { version = "1.0", features = ["from", "into"] }
test-case = { version = "3.3", default-features = false }
